Added a bunch of new commands, enemies, updated the puzzles and plot, and game updates